--- a/markdown/_posts/2011-04-29-live.md
+++ b/markdown/_posts/2011-04-29-live.md
@@ -2,7 +2,7 @@
 layout: post
 category: live
 title: バンド「みるふぃーゆ」
-place: 新宿Wild Side Tokyo
+place: さいたま新都心HEAVEN'S ROCK
 tags: self
 ---
 バンド「みるふぃーゆ」 Vo.
