--- a/markdown/_posts/2011-11-22-live.md
+++ b/markdown/_posts/2011-11-22-live.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 category: live
-title: (no title)
-place: 千葉ZX
-tags: self
+title: 仲村屋サポート
+place: 高田馬場mono
+tags: support
 ---
+仲村屋サポート Cho.
