--- a/markdown/_posts/2012-05-12-live.md
+++ b/markdown/_posts/2012-05-12-live.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 category: live
-title: (no title)
-place: 千葉ZX
-tags: self
+title: バンド「ろりこん&#x2606;ふぉーす」
+place: 目黒LIVE STATION
+tags: band
 ---
+バンド「ろりこん&#x2606;ふぉーす」 Key.
