--- a/markdown/_posts/2013-10-13-live.md
+++ b/markdown/_posts/2013-10-13-live.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 category: live
-title: (no title)
-place: 千葉ZX
-tags: self
+title: 横浜ジャズプロムナード バンド
+place: 関内
+tags: band
 ---
+横浜ジャズプロムナード バンド pf.
