--- a/markdown/_posts/2013-10-31-live.md
+++ b/markdown/_posts/2013-10-31-live.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 category: live
-title: (no title)
-place: 千葉ZX
-tags: self
+title: ジャズバンド
+place: 西荻窪Coco Palm
+tags: band
 ---
+ジャズバンド pf.
