--- a/markdown/_posts/2014-02-09-live.md
+++ b/markdown/_posts/2014-02-09-live.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 category: live
-title: (no title)
-place: 千葉ZX
-tags: self
+title: バンド「東京塩麹」 サポート
+place: 代官山 晴れたら空に豆まいて
+tags: band
 ---
+バンド「東京塩麹」サポート Cho.
