--- a/markdown/_posts/2014-04-12-live.md
+++ b/markdown/_posts/2014-04-12-live.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 category: live
-title: (no title)
-place: 千葉ZX
-tags: self
+title: バンド「Satoru Special Session's」
+place: 大久保HOTSHOT
+tags: band
 ---
+バンド「Satoru Special Session's」 Key.
