--- a/markdown/_posts/2014-06-02-live.md
+++ b/markdown/_posts/2014-06-02-live.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 category: live
-title: (no title)
-place: 千葉ZX
-tags: self
+title: 輝け! ドリームマッチ
+place: 代々木labo
+tags: band
 ---
+輝け! ドリームマッチ Vo.
