--- a/markdown/_posts/2014-06-21-live.md
+++ b/markdown/_posts/2014-06-21-live.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 category: live
-title: (no title)
-place: 千葉ZX
-tags: self
+title: 梶礼美菜サポート
+place: 赤坂GRAFFITI
+tags: support
 ---
+梶札美菜サポート Key.
