--- a/markdown/_posts/2014-07-21-live.md
+++ b/markdown/_posts/2014-07-21-live.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 category: live
-title: (no title)
-place: 千葉ZX
-tags: self
+title: バンド「青木海賊団」サポート
+place: 代々木labo
+tags: band
 ---
+バンド「青木海賊団」サポート Key.
