--- a/markdown/_posts/2014-07-23-live.md
+++ b/markdown/_posts/2014-07-23-live.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 category: live
-title: (no title)
-place: 千葉ZX
-tags: self
+title: 江畑貴弘サポート
+place: 渋谷Gee-ge
+tags: support
 ---
+江畑貴弘サポート pf.
