--- a/markdown/_posts/2014-09-20-live.md
+++ b/markdown/_posts/2014-09-20-live.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 category: live
-title: (no title)
-place: 千葉ZX
-tags: self
+title: 雅博サポート
+place: 日立市河原子北浜スポーツ広場
+tags: support
 ---
+雅博サポート Key.
