--- a/markdown/_posts/2015-02-28-live.md
+++ b/markdown/_posts/2015-02-28-live.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 category: live
-title: (no title)
-place: 千葉ZX
-tags: self
+title: どっれーみ! 企画ライブ 6!
+place: 北参道ストロボカフェ
+tags: solo
 ---
