--- a/markdown/_posts/2015-04-12-live.md
+++ b/markdown/_posts/2015-04-12-live.md
@@ -1,7 +1,10 @@
 ---
 layout: post
 category: live
-title: (no title)
-place: 千葉ZX
-tags: self
+title: 「Prism&#x2606;Smile」/雅博サポート/ショウエイ サポート
+place: 大久保HOTSHOT
+tags: support band
 ---
+バンド「Prism&#x2606;Smile」 Key.  
+雅博サポート Key.  
+ショウエイ サポート Key.
