--- a/markdown/_posts/2011-10-23-live.md
+++ b/markdown/_posts/2011-10-23-live.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 category: live
-title: (no title)
-place: 千葉ZX
-tags: self
+title: バンド「MAYA Project」
+place: 六本木CLUB EDGE
+tags: band
 ---
+バンド「MAYA Project」 Key.
