--- a/markdown/_posts/2011-11-05-live.md
+++ b/markdown/_posts/2011-11-05-live.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 category: live
-title: (no title)
-place: 千葉ZX
-tags: self
+title: バンド「飲酒後ドライブタイム」
+place: 西荻窪ターニング
+tags: band
 ---
+バンド「飲酒後ドライブタイム」 Key.
