--- a/markdown/_posts/2013-03-03-live.md
+++ b/markdown/_posts/2013-03-03-live.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 category: live
-title: (no title)
-place: 千葉ZX
-tags: self
+title: どっれーみ! 企画ライブ 2!
+place: 大久保HOTSHOT
+tags: solo
 ---
