--- a/markdown/_posts/2014-03-23-live.md
+++ b/markdown/_posts/2014-03-23-live.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 category: live
-title: (no title)
-place: 千葉ZX
-tags: self
+title: バンド「White Lily」
+place: 永山M.studio
+tags: band
 ---
+バンド「White Lily」 Key.
