--- a/markdown/_posts/2014-05-21-live.md
+++ b/markdown/_posts/2014-05-21-live.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 category: live
-title: (no title)
-place: 千葉ZX
-tags: self
+title: 雅博サポート
+place: 代々木labo
+tags: support
 ---
+雅博サポート Key.
