--- a/markdown/_posts/2014-05-23-live.md
+++ b/markdown/_posts/2014-05-23-live.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 category: live
-title: (no title)
-place: 千葉ZX
-tags: self
+title: バンド「えんぜる☆ふれんち」
+place: 大久保HOTSHOT
+tags: band
 ---
+バンド「えんぜる☆ふれんち」 Key.
