--- a/markdown/_posts/2014-08-15-live.md
+++ b/markdown/_posts/2014-08-15-live.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 category: live
-title: (no title)
-place: 千葉ZX
-tags: self
+title: 江畑貴弘サポート
+place: イオンタウン不死身
+tags: support
 ---
+江畑貴弘サポート Key.
