--- a/markdown/_posts/2015-03-04-live.md
+++ b/markdown/_posts/2015-03-04-live.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 category: live
-title: (no title)
-place: 千葉ZX
-tags: self
+title: アニソンバンド サポート
+place: 大久保HOTSHOT
+tags: support
 ---
+アニソンバンドサポート Key.
