--- a/markdown/_posts/2015-04-05-live.md
+++ b/markdown/_posts/2015-04-05-live.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 category: live
-title: (no title)
-place: 千葉ZX
-tags: self
+title: 木村千草サポート
+place: 銀座Miiya cafe
+tags: support
 ---
+木村千草サポート Key.
