--- a/src/_posts/2007-07-16-live.md
+++ b/src/_posts/2007-07-16-live.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 category: live
-title: (no title)
+title: 第3回ヤマハ池袋シンガーソングライティングコース LIVE 
 place: 四谷天窓.comfort
 tags: solo
+reflink: http://www.otonami.com/comfort/schedule/0707.htm
 ---
