--- a/src/_posts/2008-05-25-live.md
+++ b/src/_posts/2008-05-25-live.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 category: live
-title: (no title)
+title: 池袋YAMAHAソングライティングコース Live
 place: 銀座Miiya cafe
 tags: solo
+reflink: http://www.miiya-cafe.com/sch2008.5.html
 ---
