--- a/src/_posts/2011-09-24-live.md
+++ b/src/_posts/2011-09-24-live.md
@@ -1,7 +1,17 @@
 ---
 layout: post
 category: live
-title: (no title)
+title: 真優企画『音楽にジャンルの違いはかんけーねぇー！！！』
 place: 大久保HOTSHOT
 tags: solo
 ---
+
+その他の出演者・バンド
+
+* エログロにゃんせンス
+* king-Panther
+* 絶倫無双コブラ
+* クリラヨシユキ
+* 尾上 明範
+* BLOW
+* 真優
