--- a/src/_posts/2012-03-22-live.md
+++ b/src/_posts/2012-03-22-live.md
@@ -1,7 +1,15 @@
 ---
 layout: post
 category: live
-title: (no title)
+title: 抱きしめて、百人町
 place: 大久保HOTSHOT
 tags: solo
 ---
+
+その他の出演者・バンド
+
+* tossy
+* 高林准多
+* 竹内克文
+* コヤマヨリコ
+* 高橋ルミ子
