--- a/src/_posts/2012-05-12-live.md
+++ b/src/_posts/2012-05-12-live.md
@@ -1,8 +1,16 @@
 ---
 layout: post
 category: live
-title: バンド「ろりこん&#x2606;ふぉーす」
+title: N.V.C.C Presents アニめぐろ2012 Vol.8
 place: 目黒LIVE STATION
 tags: band
 ---
 バンド「ろりこん&#x2606;ふぉーす」 Key.
+
+その他の出演者・バンド
+
+* 成田家
+* スマイル=&yen;0
+* 前&#x2606;戯&#x2606;王
+* パンdeライオン
+* ズッキー
