--- a/src/_posts/2012-07-06-live.md
+++ b/src/_posts/2012-07-06-live.md
@@ -1,7 +1,14 @@
 ---
 layout: post
 category: live
-title: (no title)
+title: ACOUSTIC NIGHT
 place: 大久保HOTSHOT
 tags: solo
 ---
+
+その他の出演者・バンド
+
+* ゆーと
+* コヤマヨリコ
+* 皆川かずや
+* CREST
