--- a/src/_posts/2012-07-27-live.md
+++ b/src/_posts/2012-07-27-live.md
@@ -1,7 +1,14 @@
 ---
 layout: post
 category: live
-title: (no title)
+title: 大久保アニソンナイト夏の陣
 place: 大久保HOTSHOT
 tags: solo
 ---
+
+その他の出演者・バンド
+
+* コヤマヨリコ
+* 舞.コマンタ
+* 如月エマ
+* クリリス
