--- a/src/_posts/2012-08-04-live.md
+++ b/src/_posts/2012-08-04-live.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 category: live
-title: (no title)
+title: SUNRIZE presents SATURDAY BOOTZ CAMP
 place: 両国SUNRIZE
 tags: solo
 ---
