--- a/src/_posts/2012-09-22-live.md
+++ b/src/_posts/2012-09-22-live.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 category: live
-title: (no title)
+title: FLYING CAT PRESENTS WOMAN'S POWER vol.53 東京編
 place: 目黒LIVE STATION
 tags: solo
 ---
