--- a/src/_posts/2012-09-23-live.md
+++ b/src/_posts/2012-09-23-live.md
@@ -1,7 +1,13 @@
 ---
 layout: post
 category: live
-title: どっれーみ! 企画ライブ 1!
+title: どっれーみ! 企画ライブ! その1!
 place: 大久保HOTSHOT
 tags: solo
 ---
+
+その他の出演者・バンド
+
+* じょいかわ
+* 舞.コマンタ
+* 仲村屋
