--- a/src/_posts/2012-10-31-live.md
+++ b/src/_posts/2012-10-31-live.md
@@ -1,7 +1,17 @@
 ---
 layout: post
 category: live
-title: (no title)
+title: 大久保アニソンナイト☆はろうぃんの宴！
 place: 大久保HOTSHOT
 tags: solo
 ---
+
+その他の出演者・バンド
+
+* オラオラ小僧・瑛紫-Eishi-
+* 舞.コマンタ
+* 宮魔枢
+* 如月エマ
+* 絶園のテヘペロリスト
+* SOA
+* DJ:satoru
