--- a/src/_posts/2012-12-05-live.md
+++ b/src/_posts/2012-12-05-live.md
@@ -1,7 +1,13 @@
 ---
 layout: post
 category: live
-title: (no title)
+title: ACOUSTICな夜
 place: 大久保HOTSHOT
 tags: solo
 ---
+
+その他の出演者・バンド
+
+* Blanc/Noir
+* コヤマヨリコ
+* SHiN
