--- a/src/_posts/2013-01-30-live.md
+++ b/src/_posts/2013-01-30-live.md
@@ -1,7 +1,17 @@
 ---
 layout: post
 category: live
-title: (no title)
+title: 大久保アニソンNIGHTことよろ！
 place: 大久保HOTSHOT
 tags: solo
 ---
+
+その他の出演者・バンド
+
+
+* 宮魔枢
+* 絶園のテヘペロリスト
+* 如月エマ
+* チビィ
+
+andmore..
