--- a/src/_posts/2013-03-03-live.md
+++ b/src/_posts/2013-03-03-live.md
@@ -1,7 +1,13 @@
 ---
 layout: post
 category: live
-title: どっれーみ! 企画ライブ 2!
+title: どっれーみ! 企画ライブ 2! ～ひなまつり～
 place: 大久保HOTSHOT
 tags: solo
 ---
+
+その他の出演者・バンド
+
+* こばと
+* 奈那
+* 舞.コマンタ
