--- a/src/_posts/2013-10-25-live.md
+++ b/src/_posts/2013-10-25-live.md
@@ -1,7 +1,13 @@
 ---
 layout: post
 category: live
-title: (no title)
+title: Nekomimi Project presents「WASSHOI　Live！Vol.1」
 place: 大久保HOTSHOT
 tags: solo
 ---
+
+その他の出演者・バンド
+
+* Try angle
+* 大島翼
+* NOIR
