--- a/src/_posts/2013-12-12-live.md
+++ b/src/_posts/2013-12-12-live.md
@@ -1,7 +1,18 @@
 ---
 layout: post
 category: live
-title: (no title)
+title: 「大久保冬物語2013」
 place: 大久保HOTSHOT
 tags: solo
 ---
+
+その他の出演者
+
+* 山口太郎
+* コヤマヨリコ
+* かなやん
+* とある学園祭の委員長
+* 村男
+* 雅博
+* 皆川かずや
+* Atarashi
