--- a/src/_posts/2014-01-30-live.md
+++ b/src/_posts/2014-01-30-live.md
@@ -1,7 +1,14 @@
 ---
 layout: post
 category: live
-title: (no title)
+title: Nekomimi Project presents Wasshoi Live! Vol.5 ～アコースティック～
 place: 大久保HOTSHOT
 tags: solo
 ---
+
+その他の出演者・バンド
+
+* 2heart
+* ryo
+* 前村涼太
+* 大島翼
