--- a/src/_posts/2014-02-09-live.md
+++ b/src/_posts/2014-02-09-live.md
@@ -1,8 +1,14 @@
 ---
 layout: post
 category: live
-title: バンド「東京塩麹」 サポート
+title: 俺の部屋 Vol.5
 place: 代官山 晴れたら空に豆まいて
 tags: band
 ---
 バンド「東京塩麹」サポート Cho.
+
+その他の出演者・バンド
+
+* スガダイロー&times;吉田達也
+* フレネシ
+* 三浦康嗣(□□□)
