--- a/src/_posts/2014-02-14-live.md
+++ b/src/_posts/2014-02-14-live.md
@@ -1,8 +1,15 @@
 ---
 layout: post
 category: live
-title: バンド「REMI project」
+title: HOTSHOT presents 「大久保アニソンNight★ Vol.7 ～正しいバレンタインの過ごし方～」
 place: 大久保HOTSHOT
 tags: band
 ---
 バンド「REMI project」 Vo. & Key.
+
+その他の出演者・バンド
+
+* CliriS
+* BK69
+* て、お前かP
+* アツキバンド
