--- a/src/_posts/2014-03-02-live.md
+++ b/src/_posts/2014-03-02-live.md
@@ -1,7 +1,15 @@
 ---
 layout: post
 category: live
-title: どっれーみ! 企画ライブ 4!
+title: れーみ&#x2606; presents 「どっれーみ! 企画ライブ 4!」
 place: 大久保HOTSHOT
 tags: solo
 ---
+
+その他の出演者・バンド
+
+* やまだゆりこ
+* 川田まな
+* 皆川かずや
+
+andmore
