--- a/src/_posts/2014-03-20-live.md
+++ b/src/_posts/2014-03-20-live.md
@@ -1,7 +1,14 @@
 ---
 layout: post
 category: live
-title: (no title)
+title: Acoustic Ensemble Vol.9
 place: 大久保HOTSHOT
 tags: solo
 ---
+
+その他の出演者・バンド
+
+* Cathy
+* 千智
+* 雅博
+* 池永芽
