--- a/src/_posts/2014-03-28-live.md
+++ b/src/_posts/2014-03-28-live.md
@@ -1,7 +1,16 @@
 ---
 layout: post
 category: live
-title: (no title)
+title: 「Wasshoi Live！～音と酒Night～」
 place: 大久保HOTSHOT
 tags: solo
 ---
+
+その他の出演者・バンド
+
+* Two U
+* JUDY.+あゆんじぇ
+* コヤマヨリコ
+* 深沢郁(Kaoru Fukazawa)
+* 川端達也
+* 喉
