--- a/src/_posts/2014-04-01-live.md
+++ b/src/_posts/2014-04-01-live.md
@@ -1,7 +1,13 @@
 ---
 layout: post
 category: live
-title: (no title)
+title: 中that presents 「Acoustic Night Vol.1」
 place: 大久保HOTSHOT
 tags: solo
 ---
+
+その他の出演者・バンド
+
+* えんがわ
+* 空音
+* 中that
