--- a/src/_posts/2014-04-12-live.md
+++ b/src/_posts/2014-04-12-live.md
@@ -1,8 +1,18 @@
 ---
 layout: post
 category: live
-title: バンド「Satoru Special Session's」
+title: Satoru Night Extreme!!!Lv.34前夜祭 ～Sweet Heart Session～
+
 place: 大久保HOTSHOT
 tags: band
 ---
 バンド「Satoru Special Session's」 Key.
+
+その他の出演者・バンド
+
+* ハロフレ
+* 星野つばさスペシャルバンド
+* 月奈&あまち
+* THE KAWABATA BAND
+* 絶宴のテヘペロリスト Ver.4.12
+* Dj:ゆーだい(浅草デカルチャー!!Night)
