--- a/src/_posts/2014-05-02-live.md
+++ b/src/_posts/2014-05-02-live.md
@@ -1,8 +1,17 @@
 ---
 layout: post
 category: live
-title: バンド「えありー＊あんさんぶる」
+title: 「大久保春物語2014」
 place: 大久保HOTSHOT
 tags: band
 ---
 バンド「えありー＊あんさんぶる」 Key.
+
+その他の出演者・バンド
+
+* 石神ひろみ
+* コヤマヨリコ
+* Cathy
+* mahiro
+* 皆川かずや
+* Atarashi
