--- a/src/_posts/2014-05-17-live.md
+++ b/src/_posts/2014-05-17-live.md
@@ -1,7 +1,16 @@
 ---
 layout: post
 category: live
-title: (no title)
+title: Soulful Music Vol.9～梅雨入りアンプラグド～
 place: 赤坂GRAFFITI
 tags: solo
 ---
+
+その他の出演者・バンド
+
+* sachi.
+* 美桜
+* 美結
+* 梶礼美菜
+* 今井あすか
+* 岸 沙也香
