--- a/src/_posts/2014-06-21-live.md
+++ b/src/_posts/2014-06-21-live.md
@@ -1,8 +1,16 @@
 ---
 layout: post
 category: live
-title: 梶礼美菜サポート
+title: Soulful Music vol.9
 place: 赤坂GRAFFITI
 tags: support
 ---
 梶札美菜サポート Key.
+
+その他の出演者・バンド
+
+* RIRIKO
+* 瀬戸香好美
+* 今井あすか
+* 美桜
+* 美結
