--- a/src/_posts/2014-06-28-live.md
+++ b/src/_posts/2014-06-28-live.md
@@ -1,7 +1,18 @@
 ---
 layout: post
 category: live
-title: (no title)
+title: Music Rainbow ぷれぜんつ♪ ～聴かせる音楽祭!～
 place: 草加Fade in Cafe
 tags: solo
 ---
+
+その他の出演者・バンド
+
+* 今井あすか
+* 福田翔子
+* 瀬戸 香好美
+* 黒瀬マナミ
+* 美結
+* 染谷芽依
+
+※ 草加 Fade in Fafe は 2014年末に閉店しております。お店側への当記事に関する問い合わせ等はお控えいただくようお願い致します。
