--- a/src/_posts/2014-07-23-live.md
+++ b/src/_posts/2014-07-23-live.md
@@ -1,8 +1,12 @@
 ---
 layout: post
 category: live
-title: 江畑貴弘サポート
+title: YOO＆江畑貴弘2マンライブ 『唄シャワー　音シャワー　あります！！（幸せになれるおまけ付き）』 
 place: 渋谷Gee-ge
 tags: support
 ---
 江畑貴弘サポート pf.
+
+その他の出演者・バンド
+
+* YOO
