--- a/src/_posts/2014-07-26-live.md
+++ b/src/_posts/2014-07-26-live.md
@@ -1,7 +1,23 @@
 ---
 layout: post
 category: live
-title: (no title)
+title: Music Rainbow Vol.28
 place: 草加駅前アコス広場
 tags: solo
 ---
+
+その他の出演者
+
+* 美桜
+* 山瀬亜子
+* 木村千草
+* シュガーパレード
+* 和泉まみ
+* 雅博
+* 美結
+* ヌリタカユキ
+* Luna
+* Rili.
+* 岡田茜
+* tasotokyo
+* (スペシャルゲスト)
