--- a/src/_posts/2014-08-03-live.md
+++ b/src/_posts/2014-08-03-live.md
@@ -1,8 +1,38 @@
 ---
 layout: post
 category: live
-title: 雅博サポート
+title: 街の音(MACHINONE) LIVE3
 place: 草加駅前アコス広場
 tags: support
 ---
 雅博サポート Key.
+
+その他の出演者・バンド
+
+* スリーカラーズ
+* 七〇七〇
+* リジョイン
+* 和泉まみ
+* NOVIS
+* ナオヤ
+* Puca
+* Luna
+* アンブラ
+* 庄武バンド
+* 栗生田水葉
+* NOXAH
+* 内山美穂
+* クラリッサ
+* 吉田
+* 木村千草
+* 大澤
+* ヌリタカユキ
+* ソノン
+* 小河
+* 美桜
+* 今川
+* 高橋
+* みつ子
+* 花桐はづき
+* ヤマギシ
+* 染谷芽依
