--- a/src/_posts/2014-08-17-live.md
+++ b/src/_posts/2014-08-17-live.md
@@ -1,8 +1,17 @@
 ---
 layout: post
 category: live
-title: バンド「Fablic Jam」
+title: 音乃木坂Navigators presents 「泥塗れな少年のSUMMER LIVE」
 place: 大久保HOTSHOT
 tags: band
 ---
-バンド「Fablic Jam」 Key.
+バンド「Fablic JAM」 Key.
+
+その他の出演者・バンド
+
+* 音乃木坂Navigators
+* 地下アイドルマスター
+* Schwarzen Sechs Jizo
+* k-merry
+
+andmore
