--- a/src/_posts/2014-10-25-live.md
+++ b/src/_posts/2014-10-25-live.md
@@ -1,7 +1,15 @@
 ---
 layout: post
 category: live
-title: (no title)
+title: Soulful Music vol.10『耳をすませば冬の足音』
 place: 赤坂GRAFFITI
 tags: solo
 ---
+
+その他の出演者・バンド
+
+* 福田翔子
+* 美桜
+* kaco
+* Leaf-drops
+* 嵯峨野礼子 
