--- a/src/_posts/2014-11-22-live.md
+++ b/src/_posts/2014-11-22-live.md
@@ -1,7 +1,14 @@
 ---
 layout: post
 category: live
-title: (no title)
+title: Music Rainbow @ 楽器フェア 2014
 place: 東京ビッグサイト前
 tags: solo
 ---
+
+その他の出演者・バンド
+
+* 美桜
+* 明日実、
+* 木村千草
+* SOU
