--- a/src/_posts/2014-11-29-live.md
+++ b/src/_posts/2014-11-29-live.md
@@ -1,8 +1,14 @@
 ---
 layout: post
 category: live
-title: 夜風月菜サポート
+title: 夜風月奈成誕祭～真実ノ月、覚醒～
 place: 大久保HOTSHOT
 tags: support
 ---
 夜風月菜サポート Key.
+
+その他の出演者・バンド
+
+* あまちまな
+* YellowBelly
+* 月奈軍
