--- a/src/_posts/2014-11-30-live.md
+++ b/src/_posts/2014-11-30-live.md
@@ -1,8 +1,70 @@
 ---
 layout: post
 category: live
-title: 江畑貴弘サポート
+title: labo 10th Anniversary!! 30時間ライブ
 place: 代々木labo
 tags: support
 ---
 江畑貴弘サポート Key.
+
+その他の出演者・バンド
+
+* madmantails
+* the No’s
+* Heiz
+* SACHIO
+* THE BRIDGE
+* BeanSprout
+* the sheep
+* RABBIT WHICH BURNS
+* ライカキネマ
+* GRAND SLAM
+* White Note
+* 雅博
+* クロモ
+* カトウマサタカ＆サイコロ楽団
+* 加茂博之&バウムクーヘンズ
+* ボ・ビ・ボンベス
+* 明日実、
+* The Camelus
+* 金仙花
+* 海月
+* 森太輔
+* GOD TV MEAT OIL’S
+* THE STRIP HENDERSON
+* ツチハシノブユキ(ザ☆シンプルズ)
+* JUSTSIZE JUSTICE
+* 宝利美佐
+* スズキエリ
+* dj寺岡＆The Revolution
+* Fly Ants
+* ＋りょう。
+* junKroach
+* ripple
+* よーこ(NANAIRO)
+* 木下哲男
+* バッカマンズ
+* Shoot from The hip
+* Dead Niqolson
+* ＝SPINES＝
+* ガムシロップ
+* The UIL
+* ヌリタカユキ
+* 27＜HATANANA＞
+* ヒトリde108
+* TAI-ON
+* 9Rocks
+* nainaiboys
+* JAP
+* 河先健
+* 有田健太郎
+* Schiele
+* ハバタクヤ
+* Pleasure
+* 鈴木ナオト
+* よめ(MADE in J)
+* the Ray
+* Nuchi
+* シップストーリー
+* JIJIE
+* 澤田裕馬
