--- a/src/_posts/2014-12-13-live.md
+++ b/src/_posts/2014-12-13-live.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 category: live
-title: (no title)
+title: Music Rainbow ～MR緊急サミット ついきゃすすくらんぶる～
 place: 草加駅前アコス広場
 tags: solo
 ---
