--- a/src/_posts/2014-12-28-live.md
+++ b/src/_posts/2014-12-28-live.md
@@ -1,7 +1,15 @@
 ---
 layout: post
 category: live
-title: (no title)
+title: 原淳Presents 『"よりすぐり"Live ～最後の日曜日～』
 place: 阿佐ヶ谷NEXT SUNDAY
 tags: solo
 ---
+
+その他の出演者・バンド
+
+* 秋山羊子
+* 楯川明宏
+* 清水ひろみ
+* あきゆみこ
+* 原淳
