--- a/src/_posts/2015-01-31-live.md
+++ b/src/_posts/2015-01-31-live.md
@@ -1,8 +1,24 @@
 ---
 layout: post
 category: live
-title: 夜風月菜サポート
+title: 電脳DIVE Vol.2
 place: 渋谷duo
 tags: support
 ---
 夜風月菜サポート Key.
+
+その他の出演者・バンド
+
+* M-dream
+* 朝日諒
+* REI
+* 小松美恵
+* 唯瀬愛結
+* CHERЯY
+* 伍皇双姫
+* ひつじを愛でる会
+* 外園ゆう
+* ペティ
+* ZZ
+* ねみ
+* 猫まし
