--- a/src/_posts/2015-02-28-live.md
+++ b/src/_posts/2015-02-28-live.md
@@ -1,7 +1,14 @@
 ---
 layout: post
 category: live
-title: どっれーみ! 企画ライブ 6!
+title: どっれーみ! 企画ライブ 6! ～しゅーかつがんばれーみ&#x2606;～
 place: 北参道ストロボカフェ
 tags: solo
 ---
+
+その他の出演者・バンド
+
+* 仲村屋
+* 江畑貴弘
+* 皆川かずや
+* えありー＊あんさんぶる
