--- a/src/_posts/2015-04-12-live.md
+++ b/src/_posts/2015-04-12-live.md
@@ -1,10 +1,29 @@
 ---
 layout: post
 category: live
-title: 「Prism&#x2606;Smile」/雅博サポート/ショウエイ サポート
+title: さとるNight Realize!! Lv.35 前夜祭～超かしこま祭2015!!!
 place: 大久保HOTSHOT
 tags: support band
 ---
 バンド「Prism&#x2606;Smile」 Key.  
 雅博サポート Key.  
 ショウエイ サポート Key.
+
+その他の出演者・バンド
+
+* 川端達也
+* 皆川かずや
+* 絶宴のテヘペロリスト
+* 山口太郎
+* LEMONs
+* ディバインクルセイダーズ
+* WHITE HIGH
+* ACE(21)
+* Meteor Strike
+
+DJ
+
+* ゆーだい
+* プリキュアおじさん
+* わたる
+* 亀の子だわし
