--- a/src/_posts/2015-05-01-live.md
+++ b/src/_posts/2015-05-01-live.md
@@ -1,8 +1,16 @@
 ---
 layout: post
 category: live
-title: 木村千草サポート
-place: 渋谷star launge
+title: Android Baby主催 Parallelism Vol.19 「SALA Birthday Party」
+place: 渋谷Star launge
 tags: support
 ---
 木村千草サポート Key.
+
+その他の出演者・バンド
+
+* Android Baby
+* AZAZEL
+* めてぃびる。(from大阪)
+* 雨凛
+* Dazzling Queen
