--- a/src/_posts/2015-05-27-live.md
+++ b/src/_posts/2015-05-27-live.md
@@ -1,8 +1,17 @@
 ---
 layout: post
 category: live
-title: 木村千草サポート
+title: EGGTUBE☆STATION vol.2
 place: 目黒LIVE STATION
 tags: support
 ---
 木村千草サポート Key.
+
+その他の出演者・バンド
+
+* 荒牧リョウ
+* 岡田茜
+* 風見穏香
+* 黒瀬マナミ
+* 月光
+* 野澤アイラ
