--- a/src/_posts/2015-02-01-live.md
+++ b/src/_posts/2015-02-01-live.md
@@ -1,8 +1,16 @@
 ---
 layout: post
 category: live
-title: 木村千草サポート
+title: Viva川口 vol.28
 place: 川口CAVALLINO
 tags: support
 ---
 木村千草サポート Key.
+
+その他の出演者・バンド
+
+* 文香
+* 門西恋
+* 谷口深雪
+* 城所葵
+* あじあん＊たむ
