--- a/src/_posts/2015-04-05-live.md
+++ b/src/_posts/2015-04-05-live.md
@@ -1,8 +1,18 @@
 ---
 layout: post
 category: live
-title: 木村千草サポート
+title: ふわ(o・v・o)ライブ ちょっとちょっと、華は桜だけじゃないでShow
 place: 銀座Miiya cafe
 tags: support
 ---
 木村千草サポート Key.
+
+その他の出演者・バンド
+
+* 森綾加
+* 山谷結
+* MIKO
+* せりかな
+* 斉藤麻里
+
+　 
