--- a/src/_posts/2015-09-01-live.md
+++ b/src/_posts/2015-09-01-live.md
@@ -7,3 +7,22 @@ tags: solo
 ---
 
 雅博, テツ, れーみ&#x2606; (Key., Vo.)
+
+### 出演者・タイムテーブル
+
+14:00 - OPEN  
+14:20 - 14:30 MC/VICKY＆ドイツみちこ  
+14:30 - 14:50 1 the Kyoto  
+15:00 - 15:20 2 MissCast  
+15:30 - 15:50 3 Garak  
+16:00 - 16:20 4 theeKnee  
+16:30 - 16:50 5 YANTY  
+17:00 - 17:20 6 スズキエリ  
+17:30 - 17:50 7 バッカマン  
+18:00 - 18:20 8 タミコ安藤もぁ。  
+18:30 - 18:50 9 雅博とれーみとテツくん  
+19:00 - 19:20 10 JUSTSIZE JUSTICE  
+19:30 - 19:50 11 DJ hanaya  
+20:00 - 20:20 12 宗教団体 月のムジカントゥン  
+20:30 - 20:50 13 dj teraoka&The Revoltuion  
+21:00 - 21:20 14 SACHIO  
