--- a/src/_posts/2015-09-11-live.md
+++ b/src/_posts/2015-09-11-live.md
@@ -1,9 +1,26 @@
 ---
 layout: post
-title: (未定)
+title: Music Cube
 category: live
 place: 高田馬場mono
 tags: solo
 ---
 
-(詳細未定)
+### 出演者
+
+* 藤沢郁実(メロライン)
+* Claudia
+* れーみ&#x2606;
+* 木花清佳(このはなさやか)
+
+###タイムテーブル
+
+18:30 - OPEN  
+
+
+### 料金
+
+前売 &yen;2,000  
+当日 &yen;2,500
+
+(ドリンク代別)
