--- a/src/_posts/2015-09-13-live.md
+++ b/src/_posts/2015-09-13-live.md
@@ -1,9 +1,26 @@
 ---
 layout: post
 category: live
-title: (未定)
+title: 私presents.マザー.ヤナギ生誕祭!
 place: 新宿Motion
 tags: solo
 ---
 
-(詳細未定)
+### 出演者・タイムテーブル
+
+17:00 - OPEN
+17:30 - 17:55 れーみ&#x2606;  
+18:05 - 18:30 アノバンド  
+18:40 - 19:05 減色シアター  
+19:15 - 19:40 谷川POPゴリラ  
+19:50 - 20:15 イントッシュ(熊谷)  
+20:25 - 20:50 わがままカレッジ  
+21:00 - 21:30 虎の子ラミー  
+
+
+### 料金
+
+前売 &yen;2,000  
+当日 &yen;2,500
+
+(ドリンク代別)
