--- a/src/_posts/2015-10-23-live.md
+++ b/src/_posts/2015-10-23-live.md
@@ -1,9 +1,40 @@
 ---
 layout: post
 category: live
-title: (未定)
+title: 誕生日のワガママに付き合って！みんな巻き込み！！まーぜてまーぜてまぜまぜmix NIGHT!!!
 place: 大久保HOTSHOT
 tags: solo
 ---
 
-(詳細未定)
+Open→17:00  
+Start →17:30  
+出演者、お客様同様、  
+2500円飲み放題！！！  
+絶品フードあり！！  
+
+### 出演者
+<dl>
+<dt>DJ</dt>
+<dd>成宮ショウタ</dd>
+<dt>DANCE</dt>
+<dd>舞桜&You-Hey</dd>
+<dt>ACOUSTIC</dt>
+<dd>喉<br>雅博</dd>
+<dt>BAND</dt>
+<dd>Our Locus<br>たっさんband<br>れーみ&#x2606;<br>しびれなまず<Br>HOTSHOT BAND</dd>
+<dt>FOOD</dt>
+<dd>カルボナーラ二郎<Br>mizuki</dd>
+</dl>
+
+### タイムテーブル
+17:00 - Open  
+17:30 - 17:40 舞桜&You-Hey  
+17:45 - 18:10 喉  
+18:20 - 18:45 雅博  
+18:55 - 19:20 Our Locus  
+19:30 - 19:55 たっさんband  
+20:05 - 20:30 おいおい  
+20:40 - 21:05 れーみ&#x2606;  
+21:15 - 21:40 しびれなまず  
+21:50 - 22:15 HOTSHOT BAND  
+
