--- a/src/_posts/2015-09-29-live.md
+++ b/src/_posts/2015-09-29-live.md
@@ -1,9 +1,18 @@
 ---
 layout: post
 category: live
-title: (未定)
+title: アコースティックフロアライブ「360」 Vol.1
 place: 大久保HOTSHOT
 tags: support
 ---
 
 川端達也サポート Key.
+
+### 出演者・タイムテーブル
+
+18:15 - 18:40 おいおい  
+18:45 - 19:10 山口太郎  
+19:15 - 19:40 雅博  
+19:45 - 20:10 chon  
+20:15 - 20:40 でんし人  
+20:45 - 21:10 川端達也
