--- a/src/_posts/2015-10-23-live.md
+++ b/src/_posts/2015-10-23-live.md
@@ -6,6 +6,12 @@ place: 大久保HOTSHOT
 tags: solo
 ---
 
+雅博サポート (Key)  
+たっさんbandサポート (Key)  
+れーみ&#x2606;
+  
+にて出演
+
 Open→17:00  
 Start →17:30  
 出演者、お客様同様、  
