--- a/src/_posts/2016-02-09-live.md
+++ b/src/_posts/2016-02-09-live.md
@@ -2,8 +2,9 @@
 layout: post
 category: live
 title: (未定)
-place: 下北沢
+place: 世田谷 エムズ・カンティーナ
 tags: support
 ---
 
-はたゆりこサポート(key)
+* はたゆりこサポート(key)
+* 間慎太郎サポート(key)
