--- a/src/_posts/2016-02-12-live.md
+++ b/src/_posts/2016-02-12-live.md
@@ -1,9 +1,14 @@
 ---
 layout: post
 category: live
-title: (未定)
+title: 音夜祭 ～onyasai～
 place: 高田馬場mono
 tags: band
 ---
 
-(詳細未定)
+Open  18:30  
+Start 19:00
+
+&yen; 2,000 + 1 drink
+
+れーみ&#x2606;の出演は 20:45 - 21:15 となります。
